# ttscpp

doc/: doxygen.txt  readme.txt
src/: CMakeLists.txt  Doxyfile.in  user.cmake
src/admin/: CMakeLists.txt  admin.cpp  admin.h  admin.qrc  admin.ui  main.cpp
src/cmake/: android.toolchain.cmake  build.bat.cmake  mingw.toolchain.cmake
src/console_demo/: CMakeLists.txt  main.cpp
src/console_test_runner/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  config.hpp  engine.cpp  engine.hpp
src/engine/foundation/: error.hpp  introspection.hpp  literal.hpp  log.cpp  log.hpp  memory.cpp  memory.hpp  singleton.hpp  string.cpp  string.hpp  type.hpp
src/engine/processor/: processor.hpp  processor_namespace.cpp  processor_namespace.hpp  processor_registrator.hpp  root_namespace.hpp
src/engine/processor/acoustic/: acoustic_namespace.hpp  acoustic_processor.cpp  acoustic_processor.hpp
src/engine/processor/phonetic/: letter_to_phoneme_conversion_processor.cpp  letter_to_phoneme_conversion_processor.hpp
src/test/: CMakeLists.txt  gtest.hpp  pull.cpp  test.cpp
src/test/foundation/: allocator.cpp  introspection.cpp  log.cpp  string.cpp
src/test/processor/: processor.cpp
src/test/third/: pcre.cpp  utf8.cpp  zlib.cpp
src/third/: CMakeLists.txt
